--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,15 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">-->
 </head>
+
 <body>
-    <app-root>Loading...</app-root>
+    <app-root>
+        <div class="loader">
+            <svg class="circular">
+                <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
+            </svg>
+        </div>
+    </app-root>
 </body>
+
 </html>
